Adding test to validate InjectedFailureId in request trace